--- a/index.css
+++ b/index.css
@@ -24,6 +24,9 @@ html {
     display: inline-block;
     text-align: center;
     color: #444b5a;
+    font-family: Spartan;
+    float: left;
+    margin: 0 12px;
 }
 
 .button.number {
@@ -76,7 +79,7 @@ h2 {
 }
 
 .row {
-    margin: 10px 0;
+    margin: 10px 14px;
     position: relative;
     display: inline-block;
 }
@@ -98,7 +101,16 @@ h2 {
 }
 
 @media only screen and (max-width: 534px) {
+    .button {
+        width: 53px;
+        margin: 0 10px;
+    }
+    
     #calculator {
         max-width: 327px;
+    }
+
+    .wide {
+        width: 128px;
     }
 }
